[package]
name = "openwings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.1", features = ["net", "macros", "rt", "rt-multi-thread", "io-util"]}
getopts = "0.2"
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
crossterm = "0.27.0"
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10", features = ["full"] }
futures = "0.3.30"
ratatui = "0.25.0"
chrono = "0.4.33"
uuid = {version = "1.7.0", features = ["serde", "v4"]}

